Update build configuration, add support for SBT 0.11, 0.13,